# Indian-Stock-Market-Analyzer

./: .gitignore  .replit  DEPLOYMENT.md  README.md  advanced_models.py  database.py  fastapi_app.py  indian_stock_names.py  investment_advisor.py  ipo_tracker.py  main.py  market_dashboard.py  minimal_requirements.txt  nse_stocks.py  pyproject.toml  replit.md  requirements.txt  scaler.joblib  setup.py  stock_model.joblib  stockinsight.db  test_predictor.py  test_volume_direct.py  test_volume_tracker.py  test_yfinance.py  volume_tracker.py
static/css/: style.css
static/js/: app.js
templates/: index.html
