[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.1",
    "keras>=2.14.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandas-ta>=0.3.14b0",
    "plotly>=6.2.0",
    "prophet>=1.1.7",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.5",
    "tensorflow>=2.14.0",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]
